--- a/administrator/com_joomgallery/forms/image.xml
+++ b/administrator/com_joomgallery/forms/image.xml
@@ -301,14 +301,20 @@
            label="COM_JOOMGALLERY_DATE"
            description="COM_JOOMGALLERY_DATE_DESC" />
 
-    <field name="imgmetadata"
+    <!-- <field name="imgmetadata"
            type="editor"
            editor="codemirror"
            buttons="false"
            default=""
            filter="\Joomla\CMS\Component\ComponentHelper::filterText"
            label="COM_JOOMGALLERY_IMGMETADATA"
-           description="COM_JOOMGALLERY_IMGMETADATA_DESC" />
+           description="COM_JOOMGALLERY_IMGMETADATA_DESC" /> -->
+
+    <field name="imgmetadata"
+           type="subform"
+           formsource="administrator/components/com_joomgallery/forms/subform_imageimgmetadata.xml"
+           layout="joomla.form.field.subform.default"
+           label="COM_JOOMGALLERY_IMGMETADATA" />
 
     <field name="params"
            type="subform"
