--- a/administrator/com_joomgallery/forms/subform_imageimgmetadata.xml
+++ b/administrator/com_joomgallery/forms/subform_imageimgmetadata.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
-    <field name="iptc"
+    <fieldset name="general">
+    <!--<field name="iptc"
            type="subform"
            formsource="administrator/components/com_joomgallery/forms/subform_metadata_iptc.xml"
            layout="joomla.form.field.subform.default"
-           label="IPTC" />
+           label="IPTC" />-->
 
-    <field name="exif"
-           type="subform"
-           formsource="administrator/components/com_joomgallery/forms/subform_metadata_exif.xml"
-           layout="joomla.form.field.subform.default"
-           label="EXIF" />
+        <field name="exif"
+               type="subform"
+               formsource="administrator/components/com_joomgallery/forms/subform_metadata_exif.xml"
+               layout="joomla.form.field.subform.default"
+               label="EXIF" />
+
+         <!--<field name="exif"
+                type="editor"
+                editor="codemirror"
+                buttons="false"
+                default=""
+                filter="\Joomla\CMS\Component\ComponentHelper::filterText"
+                label="COM_JOOMGALLERY_IMGMETADATA"
+                description="COM_JOOMGALLERY_IMGMETADATA_DESC" />-->
+    </fieldset>
 </form>
