--- a/administrator/com_joomgallery/forms/subform_metadata_exif.xml
+++ b/administrator/com_joomgallery/forms/subform_metadata_exif.xml
@@ -4,263 +4,11 @@
         <field name="IFD0"
                type="subform"
                formsource="administrator/components/com_joomgallery/forms/subform_metadata_exif_ifd0.xml"
-               layout="joomla.form.field.subform.default"
-               label="IFD0" />
-    
-        <field name="exif_exposuretime"
-               type="text"
-               pattern="^\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_EXPOSURETIME"
-               message="COM_JOOMGALLERY_SUBIFD_EXPOSURETIME_DESCRIPTION" />
-    
-        <field name="exif_fnumber"
-               type="text"
-               pattern="^\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_FNUMBER"
-               message="COM_JOOMGALLERY_SUBIFD_FNUMBER_DESCRIPTION" />
-    
-        <field name="exif_exposureprogram"
-               type="list"
-               default="1"
-               label="COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM"
-               description="COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_DESCRIPTION">
-             <option value="0">COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_0</option>
-             <option value="1">COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_1</option>
-             <option value="2">COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_2</option>
-             <option value="3">COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_3</option>
-             <option value="4">COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_4</option>
-             <option value="5">COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_5</option>
-             <option value="6">COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_6</option>
-             <option value="7">COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_7</option>
-             <option value="8">COM_JOOMGALLERY_SUBIFD_EXPOSUREPROGRAM_8</option>
-        </field>
-    
-        <field name="exif_isospeedratings"
-               type="number"
-               min="0"
-               max="65535"
-               step="1"
-               label="COM_JOOMGALLERY_SUBIFD_ISOSPEEDRATINGS"
-               description="COM_JOOMGALLERY_SUBIFD_ISOSPEEDRATINGS_DESCRIPTION" />
-    
-        <field name="exif_exifversion"
-               type="text"
-               pattern="^0\d{3}$"
-               label="COM_JOOMGALLERY_SUBIFD_EXIFVERSION"
-               message="COM_JOOMGALLERY_SUBIFD_EXIFVERSION_DESCRIPTION" />
-    
-        <field name="exif_datetimeoriginal"
-               type="text"
-               pattern="^[\x20-\x7E]*$"
-               label="COM_JOOMGALLERY_SUBIFD_DATETIMEORIGINAL"
-               message="COM_JOOMGALLERY_SUBIFD_DATETIMEORIGINAL_DESCRIPTION" />
-    
-        <field name="exif_datetimedigitized"
-               type="text"
-               pattern="^[\x20-\x7E]*$"
-               label="COM_JOOMGALLERY_SUBIFD_DATETIMEDIGITIZED"
-               message="COM_JOOMGALLERY_SUBIFD_DATETIMEDIGITIZED_DESCRIPTION" />
-    
-        <!-- ComponentConfiguration -->
-    
-        <field name="exif_compressedbitsperpixel"
-               type="text"
-               pattern="^\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_COMPRESSEDBITSPERPIXEL"
-               message="COM_JOOMGALLERY_SUBIFD_COMPRESSEDBITSPERPIXEL_DESCRIPTION" />
-    
-        <field name="exif_shutterspeedvalue"
-               type="text"
-               pattern="^[+-]?\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_SHUTTERSPEEDVALUE"
-               message="COM_JOOMGALLERY_SUBIFD_SHUTTERSPEEDVALUE_DESCRIPTION" />
-    
-        <field name="exif_aperturevalue"
-               type="text"
-               pattern="^\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_APERTUREVALUE"
-               message="COM_JOOMGALLERY_SUBIFD_APERTUREVALUE_DESCRIPTION" />
-    
-        <field name="exif_brightnessvalue"
-               type="text"
-               pattern="^[+-]?\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_BRIGHTNESSVALUE"
-               message="COM_JOOMGALLERY_SUBIFD_BRIGHTNESSVALUE_DESCRIPTION" />
-    
-        <field name="exif_exposurebiasvalue"
-               type="text"
-               pattern="^[+-]?\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_EXPOSEDBIASVALUE"
-               message="COM_JOOMGALLERY_SUBIFD_EXPOSEDBIASVALUE_DESCRIPTION" />
-    
-        <field name="exif_maxaperturevalue"
-               type="text"
-               pattern="^\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_MAXAPERTUREVALUE"
-               message="COM_JOOMGALLERY_SUBIFD_MAXAPERTUREVALUE_DESCRIPTION" />
-    
-        <field name="exif_subjectdistance"
-               type="text"
-               pattern="^[+-]?\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_SUBJECTDISTANCE"
-               message="COM_JOOMGALLERY_SUBIFD_SUBJECTDISTANCE_DESCRIPTION" />
-    
-        <field name="exif_meteringmode"
-               type="list"
-               default="1"
-               label="COM_JOOMGALLERY_SUBIFD_METERINGMODE"
-               description="COM_JOOMGALLERY_SUBIFD_METERINGMODE_DESCRIPTION">
-             <option value="0">COM_JOOMGALLERY_SUBIFD_METERINGMODE_0</option>
-             <option value="1">COM_JOOMGALLERY_SUBIFD_METERINGMODE_1</option>
-             <option value="2">COM_JOOMGALLERY_SUBIFD_METERINGMODE_2</option>
-             <option value="3">COM_JOOMGALLERY_SUBIFD_METERINGMODE_3</option>
-             <option value="4">COM_JOOMGALLERY_SUBIFD_METERINGMODE_4</option>
-             <option value="5">COM_JOOMGALLERY_SUBIFD_METERINGMODE_5</option>
-             <option value="6">COM_JOOMGALLERY_SUBIFD_METERINGMODE_6</option>
-             <option value="255">COM_JOOMGALLERY_SUBIFD_METERINGMODE_255</option>
-        </field>
-    
-        <field name="exif_lightsource"
-               type="list"
-               default="1"
-               label="COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE"
-               description="COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_DESCRIPTION">
-             <option value="0">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_0</option>
-             <option value="1">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_1</option>
-             <option value="2">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_2</option>
-             <option value="3">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_3</option>
-             <option value="4">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_4</option>
-             <option value="9">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_9</option>
-             <option value="10">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_10</option>
-             <option value="11">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_11</option>
-             <option value="12">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_12</option>
-             <option value="13">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_13</option>
-             <option value="14">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_14</option>
-             <option value="15">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_15</option>
-             <option value="17">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_17</option>
-             <option value="18">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_18</option>
-             <option value="19">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_19</option>
-             <option value="20">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_20</option>
-             <option value="21">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_21</option>
-             <option value="22">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_22</option>
-             <option value="23">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_23</option>
-             <option value="24">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_24</option>
-             <option value="255">COM_JOOMGALLERY_SUBIFD_LIGHTSOURCE_255</option>
-        </field>
-    
-        <field name="exif_flash"
-               type="list"
-               default="1"
-               label="COM_JOOMGALLERY_SUBIFD_FLASH"
-               description="COM_JOOMGALLERY_SUBIFD_FLASH_DESCRIPTION">
-             <option value="0">COM_JOOMGALLERY_SUBIFD_FLASH_0</option>
-             <option value="1">COM_JOOMGALLERY_SUBIFD_FLASH_1</option>
-             <option value="5">COM_JOOMGALLERY_SUBIFD_FLASH_5</option>
-             <option value="7">COM_JOOMGALLERY_SUBIFD_FLASH_7</option>
-             <option value="8">COM_JOOMGALLERY_SUBIFD_FLASH_8</option>
-             <option value="9">COM_JOOMGALLERY_SUBIFD_FLASH_9</option>
-             <option value="13">COM_JOOMGALLERY_SUBIFD_FLASH_13</option>
-             <option value="15">COM_JOOMGALLERY_SUBIFD_FLASH_15</option>
-             <option value="16">COM_JOOMGALLERY_SUBIFD_FLASH_16</option>
-             <option value="20">COM_JOOMGALLERY_SUBIFD_FLASH_20</option>
-             <option value="24">COM_JOOMGALLERY_SUBIFD_FLASH_24</option>
-             <option value="25">COM_JOOMGALLERY_SUBIFD_FLASH_25</option>
-             <option value="29">COM_JOOMGALLERY_SUBIFD_FLASH_29</option>
-             <option value="31">COM_JOOMGALLERY_SUBIFD_FLASH_31</option>
-             <option value="22">COM_JOOMGALLERY_SUBIFD_FLASH_22</option>
-             <option value="48">COM_JOOMGALLERY_SUBIFD_FLASH_48</option>
-             <option value="65">COM_JOOMGALLERY_SUBIFD_FLASH_65</option>
-             <option value="69">COM_JOOMGALLERY_SUBIFD_FLASH_69</option>
-             <option value="71">COM_JOOMGALLERY_SUBIFD_FLASH_71</option>
-             <option value="73">COM_JOOMGALLERY_SUBIFD_FLASH_73</option>
-             <option value="77">COM_JOOMGALLERY_SUBIFD_FLASH_77</option>
-             <option value="79">COM_JOOMGALLERY_SUBIFD_FLASH_79</option>
-             <option value="80">COM_JOOMGALLERY_SUBIFD_FLASH_80</option>
-             <option value="71">COM_JOOMGALLERY_SUBIFD_FLASH_71</option>
-             <option value="88">COM_JOOMGALLERY_SUBIFD_FLASH_88</option>
-             <option value="89">COM_JOOMGALLERY_SUBIFD_FLASH_89</option>
-             <option value="93">COM_JOOMGALLERY_SUBIFD_FLASH_93</option>
-             <option value="95">COM_JOOMGALLERY_SUBIFD_FLASH_95</option>
-        </field>
-    
-        <field name="exif_focallength"
-               type="text"
-               pattern="^\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_FOCALLENGTH"
-               message="COM_JOOMGALLERY_SUBIFD_FOCALLENGTH_DESCRIPTION" />
-    
-        <field name="exif_usercommentformat"
-               type="list"
-               default="1"
-               label="COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT"
-               description="COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_DESCRIPTION">
-             <option value="ASCII">COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_ASCII</option>
-             <option value="JIS">COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_JIS</option>
-             <option value="Unicode">COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_UNICODE</option>
-             <option value="Undefined">COM_JOOMGALLERY_SUBIFD_USERCOMMENTFORMAT_UNDEFINED</option>
-        </field>
-    
-        <field name="exif_usercomment"
-               type="text"
-               label="COM_JOOMGALLERY_SUBIFD_USERCOMMENT"
-               message="COM_JOOMGALLERY_SUBIFD_USERCOMMENT_DESCRIPTION" />
-    
-        <field name="exif_exifimagewidth"
-               type="number"
-               min="0"
-               max="4294967295"
-               step="1"
-               label="COM_JOOMGALLERY_SUBIFD_EXIFIMAGEWIDTH"
-               description="COM_JOOMGALLERY_SUBIFD_EXIFIMAGEWIDTH_DESCRIPTION" />
-    
-        <field name="exif_exifimageheight"
-               type="number"
-               min="0"
-               max="4294967295"
-               step="1"
-               label="COM_JOOMGALLERY_SUBIFD_EXIFIMAGEHEIGHT"
-               description="COM_JOOMGALLERY_SUBIFD_EXIFIMAGEHEIGHT_DESCRIPTION" />
-    
-        <field name="exif_focalplanexresolution"
-               type="text"
-               pattern="^\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_FOCALPLANEXRESOLUTION"
-               message="COM_JOOMGALLERY_SUBIFD_FOCALPLANEXRESOLUTION_DESCRIPTION" />
-    
-        <field name="exif_focalplaneyresolution"
-               type="text"
-               pattern="^\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_FOCALPLANEYRESOLUTION"
-               message="COM_JOOMGALLERY_SUBIFD_FOCALPLANEYRESOLUTION_DESCRIPTION" />
-    
-        <field name="exif_focalplaneresolutionunit"
-               type="list"
-               default="1"
-               label="COM_JOOMGALLERY_SUBIFD_FOCALPLANERESOLUTIONUNIT"
-               description="COM_JOOMGALLERY_SUBIFD_FOCALPLANERESOLUTIONUNIT_DESCRIPTION">
-             <option value="1">COM_JOOMGALLERY_SUBIFD_FOCALPLANERESOLUTIONUNIT_1</option>
-             <option value="2">COM_JOOMGALLERY_SUBIFD_FOCALPLANERESOLUTIONUNIT_2</option>
-             <option value="3">COM_JOOMGALLERY_SUBIFD_FOCALPLANERESOLUTIONUNIT_3</option>
-        </field>
-    
-        <field name="exif_exposureindex"
-               type="text"
-               pattern="^\d+\/\d+$"
-               label="COM_JOOMGALLERY_SUBIFD_EXPOSUREINDEX"
-               message="COM_JOOMGALLERY_SUBIFD_EXPOSUREINDEX_DESCRIPTION" />
-    
-        <field name="exif_sensingmethod"
-               type="list"
-               default="1"
-               label="COM_JOOMGALLERY_SUBIFD_SENSINGMETHOD"
-               description="COM_JOOMGALLERY_SUBIFD_SENSINGMETHOD_DESCRIPTION">
-             <option value="1">COM_JOOMGALLERY_SUBIFD_SENSINGMETHOD_1</option>
-             <option value="2">COM_JOOMGALLERY_SUBIFD_SENSINGMETHOD_2</option>
-             <option value="3">COM_JOOMGALLERY_SUBIFD_SENSINGMETHOD_3</option>
-             <option value="4">COM_JOOMGALLERY_SUBIFD_SENSINGMETHOD_4</option>
-             <option value="5">COM_JOOMGALLERY_SUBIFD_SENSINGMETHOD_5</option>
-             <option value="7">COM_JOOMGALLERY_SUBIFD_SENSINGMETHOD_7</option>
-             <option value="8">COM_JOOMGALLERY_SUBIFD_SENSINGMETHOD_8</option>
-        </field>
+               layout="joomla.form.field.subform.default" />
+
+        <field name="EXIF"
+               type="subform"
+               formsource="administrator/components/com_joomgallery/forms/subform_metadata_exif_exif.xml"
+               layout="joomla.form.field.subform.default" />
     </fieldset>
 </form>
