--- a/administrator/com_joomgallery/forms/subform_imageimgmetadata.xml
+++ b/administrator/com_joomgallery/forms/subform_imageimgmetadata.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form>
+<form addfieldprefix="Joomgallery\Component\Joomgallery\Administrator\Field">
     <fieldset name="general">
-    <!--<field name="iptc"
-           type="subform"
-           formsource="administrator/components/com_joomgallery/forms/subform_metadata_iptc.xml"
-           layout="joomla.form.field.subform.default"
-           label="IPTC" />-->
+        <field name="iptc"
+               type="subform"
+               formsource="administrator/components/com_joomgallery/forms/subform_metadata_iptc.xml"
+               layout="joomla.form.field.subform.default"
+               label="IPTC" />
 
         <field name="exif"
                type="subform"
@@ -13,13 +13,5 @@
                layout="joomla.form.field.subform.default"
                label="EXIF" />
 
-         <!--<field name="exif"
-                type="editor"
-                editor="codemirror"
-                buttons="false"
-                default=""
-                filter="\Joomla\CMS\Component\ComponentHelper::filterText"
-                label="COM_JOOMGALLERY_IMGMETADATA"
-                description="COM_JOOMGALLERY_IMGMETADATA_DESC" />-->
     </fieldset>
 </form>
