--- a/administrator/com_joomgallery/forms/subform_metadata_exif.xml
+++ b/administrator/com_joomgallery/forms/subform_metadata_exif.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form>
+<form addfieldprefix="Joomgallery\Component\Joomgallery\Administrator\Field">
     <fieldset name="general">
         <field name="IFD0"
                type="subform"
