Fix styling in form, change iptc field names and add isset check for usercomment

--- a/administrator/com_joomgallery/forms/subform_imageimgmetadata.xml
+++ b/administrator/com_joomgallery/forms/subform_imageimgmetadata.xml
@@ -10,7 +10,7 @@
         <field name="exif"
                type="subform"
                formsource="administrator/components/com_joomgallery/forms/subform_metadata_exif.xml"
-               layout="joomla.form.field.subform.default"
+               layout="joomla.form.field.subform.exif"
                label="EXIF" />
 
     </fieldset>
