--- a/administrator/com_joomgallery/forms/subform_metadata_iptc.xml
+++ b/administrator/com_joomgallery/forms/subform_metadata_iptc.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
-    <field name="iptc_citylegacy"
+    <field name="2#090"
            type="input"
            class="inputbox"
            filter="string"
@@ -8,7 +8,7 @@
            label="COM_JOOMGALLERY_IPTC_CITYLEGACY"
            description="COM_JOOMGALLERY_IPTC_CITYLEGACY_DEFINITION" />
 
-    <field name="iptc_contact"
+    <field name="2#118"
            type="input"
            class="inputbox"
            filter="string"
@@ -16,7 +16,7 @@
            label="COM_JOOMGALLERY_IPTC_CONTACT"
            description="COM_JOOMGALLERY_IPTC_CONTACT_DEFINITION" />
 
-    <field name="iptc_copyright_notice"
+    <field name="2#116"
            type="input"
            class="inputbox"
            filter="string"
@@ -24,7 +24,7 @@
            label="COM_JOOMGALLERY_IPTC_COPYRIGHTNOTICE"
            description="COM_JOOMGALLERY_IPTC_COPYRIGHTNOTICE_DEFINITION" />
 
-    <field name="iptc_country_code_legacy"
+    <field name="2#100"
            type="input"
            class="inputbox"
            filter="string"
@@ -32,7 +32,7 @@
            label="COM_JOOMGALLERY_IPTC_COUNTRYCODELEGACY"
            description="COM_JOOMGALLERY_IPTC_COUNTRYCODELEGACY_DEFINITION" />
 
-    <field name="iptc_country_county"
+    <field name="2#101"
            type="input"
            class="inputbox"
            filter="string"
@@ -40,14 +40,14 @@
            label="COM_JOOMGALLERY_IPTC_COUNTRYLEGACY"
            description="COM_JOOMGALLERY_IPTC_COUNTRYLEGACY_DEFINITION" />
 
-    <field name="iptc_creator"
+    <field name="2#080"
            type="input"
            class="inputbox"
            filter="string"
            default=""
            label="COM_JOOMGALLERY_IPTC_CREATOR" />
 
-    <field name="iptc_creator_jobtitle"
+    <field name="2#085"
            type="input"
            class="inputbox"
            filter="string"
@@ -55,7 +55,7 @@
            label="COM_JOOMGALLERY_IPTC_CREATORSJOBTITLE"
            description="COM_JOOMGALLERY_IPTC_CREATORSJOBTITLE_DEFINITION" />
 
-    <field name="iptc_credit"
+    <field name="2#110"
            type="input"
            class="inputbox"
            filter="string"
@@ -63,7 +63,7 @@
            label="COM_JOOMGALLERY_IPTC_CREDITLINE"
            description="COM_JOOMGALLERY_IPTC_CREDITLINE_DEFINITION" />
 
-    <field name="iptc_date_created"
+    <field name="2#055"
            type="calendar"
            translateformat="true"
            showtime="true"
@@ -81,7 +81,7 @@
            label="COM_JOOMGALLERY_IPTC_DESCRIPTION"
            descritpion="COM_JOOMGALLERY_IPTC_DESCRIPTION_DEFINITION" />
 
-    <field name="iptc_author"
+    <field name="2#122"
            type="input"
            class="inputbox"
            filter="string"
@@ -89,7 +89,7 @@
            label="COM_JOOMGALLERY_IPTC_DESCRIPTIONWRITER"
            description="COM_JOOMGALLERY_IPTC_DESCRIPTIONWRITER_DEFINITION" />
 
-    <field name="iptc_headline"
+    <field name="2#105"
            type="input"
            class="inputbox"
            filter="string"
@@ -97,7 +97,7 @@
            label="COM_JOOMGALLERY_IPTC_HEADLINE"
            description="COM_JOOMGALLERY_IPTC_HEADLINE_DEFINITION" />
 
-    <field name="iptc_special_instructions"
+    <field name="2#040"
            type="textarea"
            filter="string"
            rows="5"
@@ -106,15 +106,7 @@
            label="COM_JOOMGALLERY_IPTC_INSTRUCTIONS"
            description="COM_JOOMGALLERY_IPTC_INSTRUCTIONS_DEFINITION" />
 
-    <field name="iptc_intellectualgenre"
-           type="input"
-           class="inputbox"
-           filter="string"
-           default=""
-           label="COM_JOOMGALLERY_IPTC_INTELLECTUALGENRE"
-           description="COM_JOOMGALLERY_IPTC_INTELLECTUALGENRE_DEFINITION" />
-
-    <field name="iptc_keywords"
+    <field name="2#025"
            type="input"
            class="inputbox"
            filter="string"
@@ -122,7 +114,7 @@
            label="COM_JOOMGALLERY_IPTC_KEYWORDS"
            description="COM_JOOMGALLERY_IPTC_KEYWORDS_DEFINITION" />
 
-    <field name="iptc_provinceorstatelegacy"
+    <field name="2#095"
            type="input"
            class="inputbox"
            filter="string"
@@ -130,7 +122,7 @@
            label="COM_JOOMGALLERY_IPTC_PROVINCEORSTATELEGACY"
            description="COM_JOOMGALLERY_IPTC_PROVINCEORSTATELEGACY_DEFINITION" />
 
-    <field name="iptc_source"
+    <field name="2#115"
            type="input"
            class="inputbox"
            filter="string"
@@ -138,7 +130,7 @@
            label="COM_JOOMGALLERY_IPTC_SOURCE"
            description="COM_JOOMGALLERY_IPTC_SOURCE_DEFINITION" />
 
-    <field name="iptc_location"
+    <field name="2#092"
            type="input"
            class="inputbox"
            filter="string"
@@ -146,7 +138,7 @@
            label="COM_JOOMGALLERY_IPTC_SUBLOCATIONLEGACY"
            description="COM_JOOMGALLERY_IPTC_SUBLOCATIONLEGACY_DEFINITION" />
 
-    <field name="iptc_title"
+    <field name="2#005"
            type="input"
            class="inputbox"
            filter="string"
