--- a/media/com_joomgallery/css/admin.css
+++ b/media/com_joomgallery/css/admin.css
@@ -255,6 +255,6 @@ joomla-field-image .jg_minithumb {
   color: var(--warning)
 }
 
-#fieldset-images-metadata > .control-group > .controls > .subform-wrapper > .control-group > .controls > .subform-wrapper > .control-group > .control-label {
+.exif-form > .control-group > .control-label {
   display: none;
 }
