Clean up Metadata service code

--- a/administrator/com_joomgallery/forms/subform_metadata_iptc.xml
+++ b/administrator/com_joomgallery/forms/subform_metadata_iptc.xml
@@ -72,7 +72,7 @@
            label="COM_JOOMGALLERY_IPTC_DATECREATED"
            description="COM_JOOMGALLERY_IPTC_DATECREATED_DEFINITION" />
 
-    <field name="iptc_desc"
+    <field name="2#120"
            type="textarea"
            filter="string"
            rows="5"
